[tool.poetry]
name = "sklearn-pso"
version = "0.1.0"
description = "Use partical swarm optimization instead of gridsearch in scikit-learn."
authors = ["lixinyuu", "André Rodrigues <andrelmarques11@gmail.com>"]
readme = "README.md"
packages = [{include = "pso_search"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"
pandas = "^1.4.2"
scikit-learn = "^1.2.2"
pyswarms = "^1.3.0"
joblib = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
